...
        NavigationRailDestination(
          icon: Icon(Icons.extension),
          label: Text('Spider'),
        ),
        NavigationRailDestination(
          icon: Icon(Icons.tune),
          label: Text('设置'),
        ),
        NavigationRailDestination(
          icon: Icon(Icons.receipt_long),
          label: Text('日志'),
        ),
      ],
...
